--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.4.1",
-    "react-native": "0.56"
+    "react-native": "0.56",
+    "react-native-router-flux": "^4.0.5"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
