--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^4.9.1",
     "react": "16.4.1",
     "react-native": "0.56",
     "react-native-router-flux": "^4.0.5",
