--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "base-64": "^0.1.0",
     "firebase": "^4.9.1",
     "react": "16.4.1",
     "react-native": "0.56",
