--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.4.1",
     "react-native": "0.56",
     "react-native-router-flux": "^4.0.5",
+    "react-native-tab-view": "^1.2.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
